--- a/config/locales/pt-BR/models.yml
+++ b/config/locales/pt-BR/models.yml
@@ -6,4 +6,11 @@ pt-BR:
     email: "E-mail"
     password: "Senha"
     password_confirmation: "Confirmação de senha"
-    
+   
+   question:
+      category_id: "Categoria"
+      title: "Pergunta"
+      body: "Detalhes"
+
+   category:
+      name: "Categoria" 
